[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=2]
[ext_resource path="res://Root.gd" type="Script" id=3]

[node name="Root" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 2 )

[node name="Lives" type="Label" parent="UI"]
margin_left = 65.0
margin_top = 14.0
margin_right = 88.0
margin_bottom = 28.0
text = "3"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_left = 65.0
margin_top = 33.0
margin_right = 88.0
margin_bottom = 47.0
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesLabel" type="Label" parent="UI"]
margin_left = 23.0
margin_top = 33.0
margin_right = 63.0
margin_bottom = 47.0
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="UI"]
margin_left = 24.0
margin_top = 14.0
margin_right = 64.0
margin_bottom = 28.0
text = "Lives"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="UI"]
visible = false
margin_left = 460.0
margin_top = 275.0
margin_right = 534.0
margin_bottom = 289.0
text = "Game over!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMainMenu" type="Button" parent="UI"]
visible = false
margin_left = 430.0
margin_top = 352.0
margin_right = 566.0
margin_bottom = 372.0
text = "Back to main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="UI"]
visible = false
margin_left = 464.0
margin_top = 313.0
margin_right = 521.0
margin_bottom = 333.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="UI"]
margin_right = 1064.0
margin_bottom = 659.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI/Menu"]
margin_right = 1068.0
margin_bottom = 631.0
color = Color( 0.0941176, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="UI/Menu"]
margin_left = 466.0
margin_top = 310.0
margin_right = 517.0
margin_bottom = 330.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="UI/Menu"]
margin_left = 465.0
margin_top = 348.0
margin_right = 519.0
margin_bottom = 368.0
text = "Exit"

[node name="Title" type="Label" parent="UI/Menu"]
margin_left = 423.0
margin_top = 218.0
margin_right = 562.0
margin_bottom = 276.0
text = "Asteroids"
align = 1
valign = 1

[node name="PauseScreen" type="Control" parent="UI"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="Background" type="ColorRect" parent="UI/PauseScreen"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.647059 )

[node name="Text" type="Label" parent="UI/PauseScreen"]
margin_right = 1024.0
margin_bottom = 600.0
text = "Pause (Press P to unpause)"
align = 1
valign = 1

[connection signal="pressed" from="UI/BackToMainMenu" to="." method="_on_BackToMainMenu_pressed"]
[connection signal="pressed" from="UI/BackToMainMenu" to="UI" method="_on_BackToMainMenu_pressed"]
[connection signal="pressed" from="UI/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Restart" to="UI" method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Menu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="UI/Menu/Play" to="UI" method="_on_Play_pressed"]
[connection signal="pressed" from="UI/Menu/Exit" to="." method="_on_Exit_pressed"]
